<resources>
    <string name="app_name">Shindig</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_submit">Login</string>
    <string name="action_settings">What</string>
    <string name="question_title"><u>Your Shindig</u></string>
    <string name="question_when">Schedule It:</string>
    <string name="when_1">Within 1 hour</string>
    <string name="when_2">Later Today</string>
    <string name="when_3">This Week/Month</string>
    <string name="how_many">With:</string>
    <string name="people">Coworkers</string>
    <string name="finish">Finish</string>
    <string name="hello">Hello, Sample</string>
    <string name="total">Connections \nMade</string>
    <string name="events">Events \nAttended</string>
    <string name="shindigs">Shindigs \nStarted</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_Shindig_Session">ShindigSession</string>
    <string name="confirm">Let\'s Lunch!</string>
    <string name="deny">Maybe Later</string>
    <string name="middle_card">Middle business card</string>
    <string name="left_card">Left business card</string>
    <string name="right_card">Right business card</string>
    <string name="candidate_image">Image of possible Shindig candidate</string>
    <string name="shindig_logo">Shindig logo</string>
    <string name="home_button">Home button</string>
    <string name="home">Home</string>
    <string name="settings_button">Settings button</string>
    <string name="confirm_button">Confirm current candidate button</string>
    <string name="deny_button">Deny current candidate button</string>
    <string name="title_activity_home">Home</string>
    <string name="RandNum">42</string>
    <string name="chat">Chat</string>
    <string name="info_button">Full info button</string>
    <string name="ten">10</string>
    <string name="hundred">125</string>
    <string name="event_join">Join An Event</string>
    <string name="start_shindig">Start A Shindig</string>
    <string name="RandNum2">16</string>
</resources>
