<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/shindig"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Matching"
    tools:layout_editor_absoluteY="25dp"
    >

    <android.support.v4.view.ViewPager
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/settings_button"
        android:scaleType="fitCenter"
        android:src="@drawable/settings_icon"
        app:layout_constraintBottom_toTopOf="@+id/topBar"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/shindigImage"
        app:layout_constraintStart_toStartOf="@+id/shindigRight"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/home_button"
        android:scaleType="fitCenter"
        android:src="@drawable/home_icon"
        app:layout_constraintBottom_toTopOf="@+id/topBar"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toStartOf="@+id/shindigLeft"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/shindigImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/shindig_logo"
        app:layout_constraintBottom_toTopOf="@+id/topBar"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintEnd_toStartOf="@+id/shindigRight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/homeButton"
        app:layout_constraintStart_toStartOf="@+id/shindigLeft"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/shindig" />

    <Button
        android:id="@+id/letsLunchBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:autoSizeTextType="uniform"
        android:padding="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/lets_lunch_button_border"
        android:contentDescription="@string/confirm_button"
        android:text="@string/confirm"
        android:textColor="@color/orange"
        android:textSize="18sp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/maybeLaterBtn"
        app:layout_constraintTop_toTopOf="@+id/buttonCardSplit" />

    <Button
        android:id="@+id/maybeLaterBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:autoSizeTextType="uniform"
        android:padding="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/maybe_later_button_border"
        android:contentDescription="@string/deny_button"
        android:text="@string/deny"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/letsLunchBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonCardSplit" />

    <android.support.constraint.Guideline
        android:id="@+id/bottomSplit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintGuide_percent="0.58" />

    <android.support.constraint.Guideline
        android:id="@+id/topBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintGuide_percent="0.11" />

    <android.support.constraint.Guideline
        android:id="@+id/buttonCardSplit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintGuide_percent="0.86" />

    <android.support.constraint.Guideline
        android:id="@+id/shindigLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="72dp" />

    <android.support.constraint.Guideline
        android:id="@+id/shindigRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".8" />


    <android.support.constraint.Guideline
        android:id="@+id/candidateNameGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintGuide_percent="0.72" />


    <android.support.constraint.Guideline
        android:id="@+id/candidatePositionBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />


    <android.support.constraint.Guideline
        android:id="@+id/nameGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".61" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topBar"
        app:layout_constraintBottom_toTopOf="@id/candidatePositionBottom">

        <eu.davidea.flipview.FlipView
            android:id="@+id/matchFlipView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            app:frontBackground="@color/white"
            app:rearBackground="@color/white"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="0dp"
        tools:context="edmt.dev.carouselpickerdemo.Matching">

        <com.gigamole.infinitecycleviewpager.HorizontalInfiniteCycleViewPager
            android:id="@+id/horizontal_cycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="270dp"
            app:icvp_center_page_scale_offset="30dp"
            app:icvp_interpolator="@android:anim/accelerate_decelerate_interpolator"
            app:icvp_max_page_scale="0.75"
            app:icvp_medium_scaled="false"
            app:icvp_min_page_scale="0.55"
            app:icvp_min_page_scale_offset="5dp"
            app:icvp_scroll_duration="175"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/candidateNumTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:text="Candidate 1 of 5"
        android:textColor="@android:color/tertiary_text_light"
        app:layout_constraintEnd_toStartOf="@+id/shindigRight"
        app:layout_constraintStart_toStartOf="@+id/shindigLeft"
        app:layout_constraintTop_toTopOf="@+id/bottomSplit" />


</android.support.constraint.ConstraintLayout>